fix(web): fix wrap of log amended

--- a/web/src/pages/app/mods/StatusBar/LogsModal/index.scss
+++ b/web/src/pages/app/mods/StatusBar/LogsModal/index.scss
@@ -16,16 +16,16 @@
     background: #daf4f2 !important;
   }
 
-  [data-theme="dark"] .pf-v5-c-text-input-group__text-input:focus {
+  [data-theme="dark"] & .pf-v5-c-text-input-group__text-input:focus {
     outline: none !important;
     color: #fff;
   }
 
-  [data-theme="dark"] .pf-m-current {
+  [data-theme="dark"] & .pf-m-current {
     background: #47c8bf !important;
   }
 
-  [data-theme="dark"] .pf-m-match {
+  [data-theme="dark"] & .pf-m-match {
     background: #2b7873 !important;
   }
 }
